# mozzie

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  ticketflow-phase1-spec.docx  tsconfig.base.json  turbo.json
.github/workflows/: build-test.yml  ci.yml  release.yml
agents/: task-a-scaffold.md  task-b-pty-terminals.md  task-c-tickets-ui.md  task-d-orchestration.md
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_tickets.sql  002_agent_logs.sql  003_agent_config.sql  004_repos.sql  005_workspaces.sql  006_ticket_dependencies.sql  007_orchestrator_v3.sql  008_attempt_history.sql  009_conversations.sql  010_rename_ticket_to_work_item.sql  011_sub_work_items.sql  012_agent_log_events.sql  013_workspace_git_identity.sql  014_pushed_at.sql  015_work_item_chat_messages.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agents.rs  conversations.rs  license.rs  mod.rs  notes.rs  orchestrator.rs  pty.rs  repos.rs  tickets.rs  work_items.rs  workspaces.rs  worktree.rs
apps/desktop/src/hooks/: useAcpRun.ts  useAgents.ts  useAttemptHistory.ts  useAutoLaunchUnblocked.ts  (+14 more)
docs/: SPEC.md  agent-panel-session-spec.md
scripts/: acp-server.js  launch-agents.sh  start-agents.bat  start-agents.sh
(+49 files in other folders)
