[package]
name = "mozzie"
version = "0.1.6"
description = "Mozzie — AI Agent Orchestration Desktop App"
authors = ["Mozzie Contributors"]
license = "MIT"
repository = "https://github.com/usemozzie/mozzie"
edition = "2021"

[lib]
name = "mozzie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ulid = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = "0.4"
agent-client-protocol = "0.9.5"
tokio-util = { version = "0.7.18", features = ["compat"] }
async-trait = "0.1.89"
anyhow = "1.0.102"
shell-words = "1.1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
